# ludoforge

./: .gitignore  CLAUDE.md  DEBUG.md  PLAN.md  PROGRESS.md  README.md  pyproject.toml
configs/: web.yaml
core/: __init__.py  docgen.py  ghost.py  htmlviz.py  ir.py  loader.py  schema.py  text_loader.py
docs/: build_slides.py  concepts.md  decisions.md  dungeon_game_rule.md  intro-slides.md
editors/vim-lf/: README.md
editors/vim-lf/ftdetect/: lf.vim
editors/vim-lf/ftplugin/: lf.vim
editors/vim-lf/syntax/: lf.vim
editors/vscode-lf/: README.md  package.json
editors/vscode-lf/syntaxes/: lf.tmLanguage.json
examples/: README.md  balanced_build.lf  balanced_build.rule  balanced_stats.lf  balanced_stats.rule  crit_chance.lf  crit_chance.rule  day_night_cycle.lf  day_night_cycle.rule  drop_rates_real.lf  drop_rates_real.rule  dungeon.doc.md  dungeon.lf  dungeon.rule  dungeon_policy.lf  dungeon_policy.rule  dungeon_race.lf  dungeon_sim.lf  dungeon_sim.rule  item_enchant.lf  item_enchant.rule  loot_table.lf  loot_table.rule  market_sim.lf  starter_zone_drops.lf  starter_zone_drops.rule  stat_budget.lf  stat_budget.rule  stealth_combat.lf  stealth_combat.rule  terraforming_mars.lf  terraforming_mars.prose.md
examples/team_example/: _domain.lf  planner_a.lf  planner_a.rule  planner_b.lf  planner_b.rule
forge_core/: __init__.py  ir.py  loader.py  schema.py
logic/: __init__.py
logic/solver/: bmc.py  checks.py  html_report.py  report.py  translator.py
ludoforge/: __init__.py  cli.py
old_examples/: README.md  balanced_build.rule  crit_chance.rule  dungeon.rule  loot_table.rule  market_sim.rule  starter_zone_drops.rule  stealth_combat.rule
prob/: __init__.py  prism_gen.py  runner.py
probforge/: __init__.py  prism_gen.py  runner.py
ruleforge/: __init__.py  cli.py
ruleforge/dsl/: __init__.py  ir.py  loader.py  schema.py
ruleforge/solver/: __init__.py  bmc.py  checks.py  report.py  translator.py
rules/: README.md  example_warrior.rule
rules/team_example/: _domain.rule  planner_a.rule  planner_b.rule
sim/: __init__.py  aggregate.py  engine.py  html_report.py  report.py  runner.py
tests/: test_bmc.py  test_bmc_html.py  test_checks.py  test_cli.py  test_corpus.py  test_docgen.py  test_expand.py  test_ghost.py  test_ir.py  test_loader.py  test_probforge.py  test_report.py  test_schema.py  test_sheet_import.py  test_sim_aggregate.py  test_sim_engine.py  test_sim_html.py  test_sim_oracle.py  test_sim_runner.py  test_sim_scale.py  test_smoke.py  test_text_loader.py  test_transitions.py  test_translate.py  test_translator.py  test_web_app.py
tests/fixtures/: arena.lf  arena.rule  bmc_counter.lf  bmc_counter.rule  bmc_deadlock.lf  bmc_deadlock.rule  bmc_induction.lf  coin.lf  coin.rule  dice_fight.lf  dungeon.rule  dyn_index.lf  ghost_counter.lf  ghost_counter_plain.lf  nondet.lf  nondet.rule  oracle_dungeon.lf  policy_adaptive.lf  policy_choice.lf  policy_choice.rule  race_manual.lf  urn.lf  warrior_hp.lf  warrior_hp.rule
tests/fixtures/consistent/: conditional_enum_ok.lf  conditional_enum_ok.rule  dup_enum_ok.lf  dup_enum_ok.rule  independent_bounds.lf  independent_bounds.rule  prob_ok.lf  prob_ok.rule  stealth_mutex_ok.lf  stealth_mutex_ok.rule  warrior_hp_ok.lf  warrior_hp_ok.rule
tests/fixtures/contradiction/: conflicting_constants.lf  conflicting_constants.rule  prob_sum.lf  prob_sum.rule  real_cap_blocks_max.lf  real_cap_blocks_max.rule  stealth_blocked.lf  stealth_blocked.rule  unreachable_role.lf  unreachable_role.rule  warrior_level_cap.lf  warrior_level_cap.rule
web/: README.md  __init__.py  app.py  config.py  jobs.py  runs.py  sheet_import.py  translate.py
web/static/: index.html
