[project]
name = "ludoforge"
version = "0.0.1"
description = "게임 기획 검증 툴킷 — 하나의 DSL을 논리(Z3/BMC)와 확률(PRISM) 백엔드로 검증"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "z3-solver>=4.13",
    "pyyaml>=6.0",
    "typer>=0.12",
    "numpy>=1.26,<2.2",  # 2.2+ 스텁은 PEP695 type 문법 → mypy(target 3.11) 파싱 실패
]

[project.scripts]
ludoforge = "ludoforge.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "ludoforge", "logic", "sim", "prob"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["core", "ludoforge", "logic", "sim", "prob", "tests"]

# z3-solver는 타입 스텁(py.typed)을 제공하지 않으므로 import 검사만 완화한다.
[[tool.mypy.overrides]]
module = ["z3"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
