[project]
name = "ludoforge"
version = "0.0.1"
description = "게임 기획 검증 툴킷 — 하나의 DSL을 논리(Z3/BMC)와 확률(PRISM) 백엔드로 검증"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "z3-solver>=4.13",
    "typer>=0.12",
    "numpy>=1.26,<2.2", # 2.2+ 스텁은 PEP695 type 문법 → mypy(target 3.11) 파싱 실패
    "lark>=1.1", # 외부 DSL(자체 문법) 파서 — D21·6차 마일스톤
    "fastapi>=0.111", # 웹 인터페이스(D32 P3)
    "uvicorn>=0.30", # 웹 서버(ludoforge web)
    "anthropic>=0.40", # 산문→.lf LLM 번역(web/translate)
    "pyyaml>=6.0", # configs/*.yaml 로드(web/config) — DSL 프론트엔드 아님(D32)
]

[project.scripts]
ludoforge = "ludoforge.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "ludoforge", "logic", "sim", "prob", "web"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# 슬라이드 생성 스크립트는 한글 콘텐츠 데이터가 많다. ruff-format은 줄 길이를 문자 수로,
# E501은 한글을 폭 2로 세어 둘이 CJK에서 어긋난다 — 줄 폭은 순전히 미관이라 E501만 면제하고
# 구조는 ruff-format에 맡긴다.
[tool.ruff.lint.per-file-ignores]
"docs/build_slides.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["core", "ludoforge", "logic", "sim", "prob", "web", "tests"]

# z3-solver는 타입 스텁(py.typed)을 제공하지 않으므로 import 검사만 완화한다.
[[tool.mypy.overrides]]
module = ["z3"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
